--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@okto_web3/react-sdk": "^0.0.0-dev.37",
+    "@okto_web3/react-sdk": "^0.2.0",
     "@react-oauth/google": "^0.12.1",
     "buffer": "^6.0.3",
     "react": "^18.3.1",
@@ -31,6 +31,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
