--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@okto_web3/react-sdk": "^0.4.0",
     "@react-oauth/google": "^0.12.1",
     "buffer": "^6.0.3",
+    "lucide-react": "^0.483.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5"
