--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@okto_web3/react-sdk": "1.1.0",
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.10.0",
     "buffer": "^6.0.3",
     "lucide-react": "^0.483.0",
     "react": "^18.3.1",
