added email api auth and removed use of env vars

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 # The Okto environment "sandbox" or "production"
-VITE_OKTO_ENVIRONMENT=
+VITE_OKTO_ENVIRONMENT=sandbox
 
 # Only needed if google authentication is used
 VITE_GOOGLE_CLIENT_ID=
