changed to prettier check mode

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,4 +1,4 @@
-name: autofix.ci
+name: prettier
 on:
   pull_request:
   push:
@@ -10,8 +10,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
       - run: |
-          yarn
-          yarn prettier . --write
-      - uses: autofix-ci/action@v1
-        with:
-          commit-message: "Apply Prettier format"
+          npm i
+          npx prettier . -c
