--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
+    "react-social-login-buttons": "^4.1.1",
     "reactjs-social-login": "^2.6.3",
     "viem": "^2.31.6"
   },
