--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@okto_web3/react-sdk": "1.1.0",
+    "@okto_web3/react-sdk": "^1.3.0-rc.1",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.10.0",
     "buffer": "^6.0.3",
